# map-editor

./: CMakeLists.txt  LICENSE  README.md
evp/: CMakeLists.txt  gui.cpp  gui.hpp  voronoi.cpp  voronoi.hpp
projects/1_game/: README.md  code.js  index.html  worldloader.js
projects/1_game/maps/: data.txt  mini.txt  test.txt  test2.txt
projects/web/: data.txt  index.html  script.js  style.css
src/: CMakeLists.txt  main.cpp  main_gui.cpp  main_gui.hpp
